--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,15 @@
   --background-end-rgb: 255, 255, 255;
 }
 
+body,
+html {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  /* Prevent scrolling */
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
